--- a/Views/MainWindow.xaml
+++ b/Views/MainWindow.xaml
@@ -4,7 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:ff="clr-namespace:HotelManagementSystem.Views"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:HotelManagementSystem.Views" 
+        xmlns:local="clr-namespace:HotelManagementSystem.Views"
+        xmlns:vm="clr-namespace:HotelManagementSystem.ViewModels"
+        xmlns:uc="clr-namespace:HotelManagementSystem.UserControls"
         xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
         mc:Ignorable="d"
@@ -12,14 +14,73 @@
         DataContext="{StaticResource MainVM}"
         WindowStartupLocation="CenterScreen"
         TextElement.Foreground="{DynamicResource MaterialDesignBody}"
-        Title="MainWindow" Height="450" Width="800">
+        Icon="D:\2_Learnspace\2_FPT\Semester 5\PRN212\05_Asignment\HotelManagementSystem\Assets\Icons\hotel.ico"
+        Title="HTMS" Height="450" Width="800">
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
             <i:InvokeCommandAction Command="{Binding LoadedWindowCommand}" 
                                    CommandParameter="{Binding ElementName=mainWindow}"/>
         </i:EventTrigger>
     </i:Interaction.Triggers>
+    <Window.Resources>
+        <Style x:Key="NavButtonStyle" TargetType="Button">
+            <Setter Property="Margin" Value="10,5"/>
+            <Setter Property="Padding" Value="10"/>
+            <Setter Property="FontSize" Value="16"/>
+            <Setter Property="HorizontalAlignment" Value="Left"/>
+            <Setter Property="Width" Value="180"/>
+        </Style>
+    </Window.Resources>
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        
+        <!--Header-->
+        <uc:HeaderUC Grid.Row="0"/>
+        
+        <Grid Grid.Row="1">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition Width="*"/>
+            </Grid.ColumnDefinitions>
+            
+            <!--Navbar-->
+            <ContentControl HorizontalAlignment="Left" 
+                            Grid.Column="0"
+                            Content="{Binding CurrentNavbarViewModel}">
+                <ContentControl.Resources>
+                    <DataTemplate DataType="{x:Type vm:AdminNavbarViewModel}">
+                        <uc:AdminNavbar/>
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type vm:ReceptionistNavbarViewModel}">
+                        <uc:ReceptionistNavbar/>
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type vm:RoomFilterViewModel}">
+                        <uc:RoomFilterUC/>
+                    </DataTemplate>
+                </ContentControl.Resources>
+            </ContentControl>
 
+
+            <!--Room list-->
+            <ScrollViewer VerticalScrollBarVisibility="Auto"
+                          Grid.Column="1">
+                <ItemsControl ItemsSource="{Binding Rooms}">
+                    <ItemsControl.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <WrapPanel />
+                        </ItemsPanelTemplate>
+                    </ItemsControl.ItemsPanel>
+                    <ItemsControl.ItemTemplate>
+                        <DataTemplate>
+                            <uc:RoomUC Width="200" Margin="10 10 50 10"/>
+                        </DataTemplate>
+                    </ItemsControl.ItemTemplate>
+                </ItemsControl>
+            </ScrollViewer>
+            
+        </Grid>
     </Grid>
 </Window>
