--- a/Resources/MainResource.xaml
+++ b/Resources/MainResource.xaml
@@ -4,4 +4,5 @@
                     xmlns:viewmodel="clr-namespace:HotelManagementSystem.ViewModels">
     <viewmodel:MainViewModel x:Key="MainVM"></viewmodel:MainViewModel>
     <viewmodel:LoginViewModel x:Key="LoginVM"></viewmodel:LoginViewModel>
+    <viewmodel:HeaderViewModel x:Key="HeaderVM" ></viewmodel:HeaderViewModel>
 </ResourceDictionary>
